proj3/src/syntex.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error CompSt
    9       | Specifier FunDec error
   10       | error SEMI

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | error RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | error SEMI
   39     | IF error ELSE Stmt
   40     | WHILE error Stmt

   41 DefList: Def DefList
   42        | %empty

   43 Def: Specifier DecList SEMI
   44    | Specifier error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp DOT ID
   64    | ID
   65    | INT
   66    | FLOAT

   67 Args: Exp COMMA Args
   68     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 10 24 29 38 39 40 44
TYPE (258) 13
STRUCT (259) 15 16
RETURN (260) 34
IF (261) 35 36 39
ELSE (262) 36 39
WHILE (263) 37 40
ID (264) 17 19 20 22 23 60 61 63 64
SEMI (265) 4 5 7 10 32 34 38 43 44
COMMA (266) 12 25 46 67
RELOP (267) 52
ASSIGNOP (268) 48 49
PLUS (269) 53
MINUS (270) 54 58
STAR (271) 55
DIV (272) 56
AND (273) 50
OR (274) 51
DOT (275) 63
NOT (276) 59
LP (277) 22 23 35 36 37 57 60 61
RP (278) 22 23 24 35 36 37 57 60 61
LB (279) 21 62
RB (280) 21 62
LC (281) 15 28
RC (282) 15 28 29
INT (283) 21 65
FLOAT (284) 66
UMINUS (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8 9 10, on right: 2
ExtDecList (36)
    on left: 11 12, on right: 4 12
Specifier (37)
    on left: 13 14, on right: 4 5 6 7 8 9 27 43 44
StructSpecifier (38)
    on left: 15 16, on right: 14
OptTag (39)
    on left: 17 18, on right: 15
Tag (40)
    on left: 19, on right: 16
VarDec (41)
    on left: 20 21, on right: 11 12 21 27 47 48
FunDec (42)
    on left: 22 23 24, on right: 6 7 9
VarList (43)
    on left: 25 26, on right: 22 25
ParamDec (44)
    on left: 27, on right: 25 26
CompSt (45)
    on left: 28 29, on right: 6 8 33
StmtList (46)
    on left: 30 31, on right: 28 30
Stmt (47)
    on left: 32 33 34 35 36 37 38 39 40, on right: 30 35 36 37 39 40
DefList (48)
    on left: 41 42, on right: 15 28 41
Def (49)
    on left: 43 44, on right: 41
DecList (50)
    on left: 45 46, on right: 43 46
Dec (51)
    on left: 47 48, on right: 45 46
Exp (52)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66,
    on right: 32 34 35 36 37 48 49 50 51 52 53 54 55 56 57 58 59 62
    63 67 68
Args (53)
    on left: 67 68, on right: 60 67


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   10 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error CompSt
    9       | Specifier . FunDec error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 9

   10 ExtDef: error SEMI .

    $default  reduce using rule 10 (ExtDef)


State 10

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 11

   15 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    8 ExtDef: Specifier error . CompSt
   24 FunDec: error . RP

    error  shift, and go to state 22
    RP     shift, and go to state 23
    LC     shift, and go to state 24

    CompSt  go to state 25


State 16

   20 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 26

    $default  reduce using rule 20 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 27


State 19

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 28
    LB     shift, and go to state 29

    $default  reduce using rule 11 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI
    9       | Specifier FunDec . error

    error  shift, and go to state 30
    SEMI   shift, and go to state 31
    LC     shift, and go to state 24

    CompSt  go to state 32


State 21

   15 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 22

   29 CompSt: error . RC

    RC  shift, and go to state 36


State 23

   24 FunDec: error RP .

    $default  reduce using rule 24 (FunDec)


State 24

   28 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 37
    Def              go to state 35


State 25

    8 ExtDef: Specifier error CompSt .

    $default  reduce using rule 8 (ExtDef)


State 26

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 38

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 41


State 27

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 28

   12 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 19


State 29

   21 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 44


State 30

    9 ExtDef: Specifier FunDec error .
   29 CompSt: error . RC

    RC  shift, and go to state 36

    $default  reduce using rule 9 (ExtDef)


State 31

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 32

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 33

   43 Def: Specifier . DecList SEMI
   44    | Specifier . error SEMI

    error  shift, and go to state 45
    ID     shift, and go to state 42

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


State 34

   15 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 49


State 35

   41 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 35


State 36

   29 CompSt: error RC .

    $default  reduce using rule 29 (CompSt)


State 37

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 51
    RETURN  shift, and go to state 52
    IF      shift, and go to state 53
    WHILE   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 24
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 38

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 39

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 42

    VarDec  go to state 65


State 40

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 66


State 41

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 67

    $default  reduce using rule 26 (VarList)


State 42

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 43

   12 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 44

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 68


State 45

   44 Def: Specifier error . SEMI

    SEMI  shift, and go to state 69


State 46

   21 VarDec: VarDec . LB INT RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 29

    $default  reduce using rule 47 (Dec)


State 47

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 71


State 48

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 45 (DecList)


State 49

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 50

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 51

   29 CompSt: error . RC
   38 Stmt: error . SEMI

    SEMI  shift, and go to state 73
    RC    shift, and go to state 36


State 52

   34 Stmt: RETURN . Exp SEMI

    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60

    Exp  go to state 74


State 53

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   39     | IF . error ELSE Stmt

    error  shift, and go to state 75
    LP     shift, and go to state 76


State 54

   37 Stmt: WHILE . LP Exp RP Stmt
   40     | WHILE . error Stmt

    error  shift, and go to state 77
    LP     shift, and go to state 78


State 55

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   64    | ID .

    LP  shift, and go to state 79

    $default  reduce using rule 64 (Exp)


State 56

   58 Exp: MINUS . Exp

    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60

    Exp  go to state 80


State 57

   59 Exp: NOT . Exp

    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60

    Exp  go to state 81


State 58

   57 Exp: LP . Exp RP

    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60

    Exp  go to state 82


State 59

   65 Exp: INT .

    $default  reduce using rule 65 (Exp)


State 60

   66 Exp: FLOAT .

    $default  reduce using rule 66 (Exp)


State 61

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 62

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 83


State 63

   30 StmtList: Stmt . StmtList

    error   shift, and go to state 51
    RETURN  shift, and go to state 52
    IF      shift, and go to state 53
    WHILE   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 24
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 84
    Stmt      go to state 63
    Exp       go to state 64


State 64

   32 Stmt: Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    SEMI      shift, and go to state 85
    RELOP     shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 65

   21 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 29

    $default  reduce using rule 27 (ParamDec)


State 66

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 67

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 96
    ParamDec         go to state 41


State 68

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 69

   44 Def: Specifier error SEMI .

    $default  reduce using rule 44 (Def)


State 70

   48 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60

    Exp  go to state 97


State 71

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 72

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 42

    VarDec   go to state 46
    DecList  go to state 98
    Dec      go to state 48


State 73

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


State 74

   34 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    SEMI      shift, and go to state 99
    RELOP     shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 75

   39 Stmt: IF error . ELSE Stmt

    ELSE  shift, and go to state 100


State 76

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt

    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60

    Exp  go to state 101


State 77

   40 Stmt: WHILE error . Stmt

    error   shift, and go to state 51
    RETURN  shift, and go to state 52
    IF      shift, and go to state 53
    WHILE   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 24
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60

    CompSt  go to state 61
    Stmt    go to state 102
    Exp     go to state 64


State 78

   37 Stmt: WHILE LP . Exp RP Stmt

    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60

    Exp  go to state 103


State 79

   60 Exp: ID LP . Args RP
   61    | ID LP . RP

    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 104
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60

    Exp   go to state 105
    Args  go to state 106


State 80

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | MINUS Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 58 (Exp)


State 81

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 59 (Exp)


State 82
